--- a/Lesson1/index.html
+++ b/Lesson1/index.html
@@ -11,7 +11,7 @@
         h1
         {
             background: green;
-            font-size: 10pcx;
+            font-size: 10px;
         }
     </style>
 
