--- a/Lesson1/index.html
+++ b/Lesson1/index.html
@@ -8,10 +8,9 @@
     <title>Домашня робота урок 1</title>
     <link rel="stylesheet" href="./styles.css">
     <style>
-        h1
-        {
+        h1 {
             background: green;
-            font-size: 10px;
+            font-size: 20px;
         }
     </style>
 
@@ -21,10 +20,14 @@
 <h1>
     Simpson family.
 </h1>
+<img src="https://static.wikia.nocookie.net/simpsons/images/6/63/The_Simpsons_Simpsons_FamilyPicture.png"
+     style="width: 200px" alt="Simpsons family">
 <p>
-Lorem pisum dolor sit amet, consectetur adipisicing elit. Ab accusantium adipisci, aperiam architecto at dolorem
-doloribus eaque earum, enim error est et eum illo illum in laudantium maxime nihil nobis nostrum perferendis praesentium
-quas quasi quo, quos ratione tempore unde veniam vero vitae voluptatem. Aut exercitationem ipsum omnis similique totam!
+    Lorem pisum dolor sit amet, consectetur adipisicing elit. Ab accusantium adipisci, aperiam architecto at dolorem
+    doloribus eaque earum, enim error est et eum illo illum in laudantium maxime nihil nobis nostrum perferendis
+    praesentium
+    quas quasi quo, quos ratione tempore unde veniam vero vitae voluptatem. Aut exercitationem ipsum omnis similique
+    totam!
 </p>
 </body>
 </html>
