--- a/Lesson1/index.html
+++ b/Lesson1/index.html
@@ -6,28 +6,97 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Домашня робота урок 1</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="style/styles.css">
     <style>
         h1 {
             background: green;
             font-size: 20px;
+            width: 100%;
+        }
+
+        body {
+            width: 400px;
+            margin: 0;
         }
     </style>
 
 
 </head>
 <body>
+
+<div class="pagenext">
+    <a href="../Lesson2/Part1/index.html" style="text-align: right">Домашня робота. Урок 2. Частина 1.</a>
+</div>
 <h1>
-    Simpson family.
+    Родина Сімпсонів.
 </h1>
-<img src="https://static.wikia.nocookie.net/simpsons/images/6/63/The_Simpsons_Simpsons_FamilyPicture.png"
-     style="width: 200px" alt="Simpsons family">
+<hr>
+<img src="https://upload.wikimedia.org/wikipedia/uk/thumb/0/0d/Simpsons_FamilyPicture.png/164px-Simpsons_FamilyPicture.png"
+     style="width: 200px" alt="Родина Сімпсонів">
 <p>
-    Lorem pisum dolor sit amet, consectetur adipisicing elit. Ab accusantium adipisci, aperiam architecto at dolorem
-    doloribus eaque earum, enim error est et eum illo illum in laudantium maxime nihil nobis nostrum perferendis
-    praesentium
-    quas quasi quo, quos ratione tempore unde veniam vero vitae voluptatem. Aut exercitationem ipsum omnis similique
-    totam!
+    Родина Сімпсонів вперше з'явилася в етері у «Шоу Трейсі Ульман» 19 квітня 1987 року.
+    Ґрейнінґ презентував художнику ескізи-чернетки основних персонажів, сподіваючись, що їхня зовнішність зазнає
+    покращення в процесі роботи. Втім, мультиплікатори просто скопіювали його малюнки, внаслідок чого в перших серіях
+    герої виявилися намальованими дещо грубо і «неохайно».
+    За підсумками першого етерного сезону, «Сімпсони» зайняли перше місце серед усіх серіалів компанії «Fox», внаслідок
+    чого їх було пересунуто на рейтинговіший час доби.
 </p>
+<h2>
+    <a href="https://uk.wikipedia.org/wiki/Список_персонажів_мультсеріалу_«Сімпсони»"
+       target="_blank">Список_персонажів_«Сімпсони»</a>
+</h2>
+<ol>
+    <li><a href="#gomer">Гомер</a></li>
+    <li><a href="#mardg">Мардж</a></li>
+    <li><a href="#bart">Барт</a></li>
+</ol>
+<h2>
+    Характеристика персонажів. Фото.
+</h2>
+
+<ul>
+    <li id="gomer">
+        <a href="https://uk.wikipedia.org/wiki/Гомер_Сімпсон" target="_blank">
+            Гомер Джей Сімпсон</a> — милий та кумедний, проте іноді грубий і неввічливий батько родини. Гладкий, лисий,
+        ледачий і не дуже розумний. Він часто поводиться абсурдно, егоїстично і нетактовно, втім, залишається
+        симпатичним.
+        <img src="./img/гомер.png" alt="гомер">
+    </li>
+    <li id="mardg">
+        <a href="https://uk.wikipedia.org/wiki/Мардж_Сімпсон" target="_blank">
+            Мардж Сімпсон</a> - дружина Гомера Сімпсона, мати Ліси та Барта. Домогосподарка, майже весь свій час
+        проводить удома доглядаючи
+        наймолодшу дитину Меґґі, а також Барта, Лісу і чоловіка. Найвідоміша особливість героїні — блакитне волосся.
+        <img src="./img/мардж.png" alt="мардж">
+    </li>
+    <li id="bart">
+        <a href="https://uk.wikipedia.org/wiki/Барт_Сімпсон" target="_blank">
+            Бартолом'ю ДжоДжо «Барт» Сімпсон</a> — один із головних героїв мультиплікаційного серіалу Сімпсони. Барт —
+        найстарша дитина Гомера і Мардж Сімпсон. У нього також є дві молодші сестри — Ліса і Меґґі. Барт є втіленням
+        образу бешкетника та посереднього учня у школі. Разом зі своїм батьком Барт є одним із найвідоміших персонажів у
+        цьому серіалі.
+        <img src="./img/барт.png" alt="барт">
+    </li>
+</ul>
 </body>
 </html>
+
+<!--За наступною scratch-структурою створити розмітку про троьх чледнів родини сімпсонів. Данні брати з
+https://simpsons.fandom.com/wiki/Category:Simpson_family
+Стилізація через окремий css файл. кожен елемент окрім картинок повинен мати background та color. Всі картинки повінні мати ширину від 200 до 400 пікселів.
+h1-загальний заголовок з назвою сторінки
+img - Загальна фотка родини (картинка вантажиться за посиланням)
+p - загальний опис серіалу
+h2+a - заголовок з якорем який веде на сторінку персонажу. Хомер
+img - з картинкою персонажу (картинку завантажити в проєкт)
+р - опис персонажу
+ul+li - з 2-3 основними фразами персонажу
+h2+a - заголовок з якорем який веде на сторінку персонажу. Барт
+img - з картинкою персонажу (картинку завантажити в проєкт)
+р - опис персонажу
+ul+li - з 2-3 основними фразами персонажу
+h2+a - заголовок з якорем який веде на сторінку персонажу. Ліза
+img - з картинкою персонажу (картинку завантажити в проект)
+р - опис персонажу
+ul+li - з 2-3 основними фразами персонажу
+-->
